# MemToy

./: Cargo.toml  README.md  dmg.sh
.github/workflows/: rust.yml
src/: main.rs
src/component/: calendar.rs  data_management.rs  db_checker.rs  list.rs  mod.rs  record.rs  review.rs
ui/: app-window.slint  common.slint  list.slint  nav.slint  record.slint  review.slint
ui/components/: buttons.slint  calendar.slint  checkbox.slint  editor.slint  popupwindow.slint
ui/pages/: global-manager.slint  list-manager.slint  list.slint  record-manager.slint  record.slint  review-manager.slint  review.slint
