[package]
name = "MemToy"
version = "0.1.0"
build = "build.rs"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
cargo_metadata = "0.19.1"
chrono = "0.4.39"
directories = "5.0.1"
env_logger = "0.11.6"
log = { version = "0.4.22" }
rand = "0.8"
regex = "1.11.1"
rusqlite = "0.32.1"
slint = "1.9.1"
url = "2.5.4"
webbrowser = "1.0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
getrandom = { version = "0.2.2", features = ["js"] }

[build-dependencies]
slint-build = "1.9.1"
