[package]
name = "MemToy"
version = "0.2.1"
build = "build.rs"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
chrono = "0.4.39"
directories = "5.0.1"
env_logger = "0.11.6"
log = { version = "0.4.22" }
rand = "0.8"
regex = "1.11.1"
rusqlite = "0.32.1"
slint = "1.9.1"
url = "2.5.4"
webbrowser = "1.0.3"

[profile.release]
strip = true
panic = "abort"
lto = true
opt-level = "z"
codegen-units = 1

[build-dependencies]
slint-build = "1.9.1"
