[package]
build = "build.rs"
edition = "2021"
name = "MemToy"
version = "1.1.1"

[dependencies]
anyhow = "1.0.94"
chrono = "0.4.39"
directories = "5.0.1"
env_logger = "0.11.6"
log = { version = "0.4.22" }
rand = "0.8"
regex = "1.11.1"
rusqlite = "0.32.1"
slint = "1.12.1"
url = "2.5.4"
webbrowser = "1.0.3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[build-dependencies]
slint-build = "1.12.1"

[package.metadata.packager]
before-packaging-command = "cargo build --release"
binaries_dir = "target/release"
category = "Utility"
icons = ["ui/images/memtoy.icns"]
identifier = "tech.rianico.memtoy"
license_file = "LICENSE"
out-dir = "bundle"
product-name = "MemToy"
resources = ["ui/icons/**"]
